CKS-oline/00-execersie/Network-Policy/01-deny-accept/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run:  pod-1 
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run : pod-2
