CKS-oline/00-execersie/Network-Policy/01-deny-accept/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run:  pod-2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run : pod-1
